BUG FIX: The word data was getting a little out of the screen.

--- a/src/styles/CTA.module.css
+++ b/src/styles/CTA.module.css
@@ -17,7 +17,7 @@
     top: 112px;
     left: 0;
     transform: translateY(-50%);
-    width: 100vw;
+    width: 90vw;
     max-width: 768px;
 }
 
